--- a/client/pages/login/login.css
+++ b/client/pages/login/login.css
@@ -31,7 +31,8 @@ h1 {
 }
 
 .remember_me {
-  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
   margin-bottom: 10px;
 }
 
@@ -56,4 +57,5 @@ label.remember {
   text-decoration: underline;
   margin-bottom: 10px;
   padding: 0 5px;
-}/*# sourceMappingURL=login.css.map */
+}
+/*# sourceMappingURL=login.css.map */
