hoàn tất trang bảng điểm học sinh

--- a/server/views/static/class-list.html
+++ b/server/views/static/class-list.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" style="width:100%;">
         <div class="sidebar">
             <div class="header_sidebar">
                 <div class="header__sidebar-left">
@@ -55,7 +55,7 @@
             </div>
             <div class="class-title">
                 <p>Danh Sách Lớp</p>
-                <span>Thông tin lớp học</span>
+                <!-- <span>Thông tin lớp học</span> -->
             </div>
             <div class="select">
               <span>Chọn lớp : </span>
@@ -72,8 +72,8 @@
               <button id="view-class-btn">Xem</button>
               <button id="disp-stu-list-btn">Thêm học sinh</button>
             </div>
-            <div class="main-content">
-                <div class="main-content__info">
+            <div class="main-content" style="width:100%;">
+                <div class="main-content__info" style="width:100%;width:auto;">
                     <div class="main-content__info-top" style="border: none;">
                         <table style="width:100%; border: 1px solid black; border-collapse: collapse;">
                             <thead>
