--- a/server/public/css/subject-score-table.css
+++ b/server/public/css/subject-score-table.css
@@ -167,7 +167,7 @@
 
 .container .right-container .main-content {
   padding: 10px;
-  width: 1189px;
+  /* width: 1189px; */
   margin-top: 5px;
   margin-left: 50px;
   background-color: #bdbaba;
@@ -177,7 +177,7 @@
 }
 
 .container .right-container .main-content .main-content__info {
-  width: 1180px;
+  /* width: 1180px; */
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
