--- a/server/views/static/subject-score-table.html
+++ b/server/views/static/subject-score-table.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="../../public/css/subject-score-table.css"> -->
     <link rel="stylesheet" href="http://localhost:5000/css/subject-score-table.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
@@ -17,11 +18,11 @@
         <div class="sidebar">
             <div class="header_sidebar">
                 <div class="header__sidebar-left">
-                    <p id="user">User: <span>Duy anh</span></p>
-                    <p id="today">Today: <span>03-10-2022</span></p>
+                    <p id="user">Người dùng: <span id="username"></span></p>
+                    <p id="today">Hôm nay: <span id="todayis"></span></p>
+                    <p id="today"><span id="logout"><a href="/logout" style="color: red;">Đăng xuất<a></span></p>
                 </div>
                 <div class="header__sidebar-right">
-
                 </div>
             </div>
             <div class="menu">
@@ -30,7 +31,7 @@
                         <a href="#">MENU</a>
                     </li>
                     <li>
-                        <a href="/student">Danh Sách Sinh Viên</a>
+                        <a href="/student">Danh Sách Học Sinh</a>
                     </li>
                     <li>
                         <a href="/class">Danh Sách Lớp</a>
@@ -49,16 +50,15 @@
         </div>
         <div class="right-container">
             <div class="header">
-                <h1>STUDENT SYSTEM MANAGER</h1>
+                <h1>Hệ Thống Quản Lý Học Sinh</h1>
             </div>
             <div class="class-title">
                 <p>Bảng Điểm Môn Học</p>
-                <span>Thông tin bảng diểm môn học</span>
             </div>
             <div class="select">
                 <div class="select-class">
-                    <span>Chọn lớp : </span>
-                    <select name="" class="select-class">
+                    <span>Chọn lớp: </span>
+                    <select id="class-input" class="select-class">
                         <option value="10A1">Lớp 10A1</option>
                         <option value="10A2">Lớp 10A2</option>
                         <option value="10A3">Lớp 10A3</option>
@@ -70,24 +70,27 @@
                     </select>
                 </div>
                 <div class="select-subject">
-                    <span>Chọn môn : </span>
-                    <select name="" class="select-class">
-                        <option value="0">Toán</option>
-                        <option value="1">Lí</option>
-                        <option value="2">Hóa</option>
-                        <option value="3">Văn</option>
-                        <option value="4">Sử</option>
-                        <option value="5">Địa</option>
+                    <span>Chọn môn: </span>
+                    <select id="subject-input" class="select-class">
+                        <option value="Toán">Toán</option>
+                        <option value="Văn">Văn</option>
+                        <option value="Lý">Lý</option>
+                        <option value="Hóa">Hóa</option>
+                        <option value="Sinh">Sinh</option>
+                        <option value="Sử">Sử</option>
+                        <option value="Địa">Địa</option>
+                        <option value="Đạo Đức">Đạo Đức</option>
+                        <option value="Thể Dục">Thể Dục</option>
                     </select>
                 </div>
                 <div class="select-semester">
                     <span>Chọn học kì : </span>
-                    <select name="" class="select-class">
-                        <option value="0">1</option>
-                        <option value="1">2</option>
+                    <select id="semester-input" class="select-class">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
                     </select>
                 </div>
-                <button>Xem</button>
+                <button onclick="viewScoreTable()">Xem</button>
             </div>
 
             <div class="main-content">
@@ -97,98 +100,61 @@
                             <thead>
                                 <tr>
                                     <th style="text-align:left;height:30px;" colspan="2"> Lớp:
-                                        <span>................</span>
+                                        <span id="Class"></span>
                                     </th>
                                     <th style="text-align:left;height:30px;" colspan="3"> Môn:
-                                        <span>................</span>
+                                        <span id="Subject"></span>
                                     </th>
 
                                 </tr>
                                 <tr>
                                     <th style="text-align:left;height:30px;" colspan="2"> Học kì:
-                                        <span>................</span>
+                                        <span id="Semester"></span>
                                     </th>
                                 </tr>
                                 <tr>
                                     <th>STT</th>
+                                    <th>Mã số</th>
                                     <th>Họ tên</th>
-                                    <th>Điểm 15'</th>
+                                    <th>Điểm 15p</th>
                                     <th>Điểm 1 tiết</th>
-                                    <th>Điểm cuối HK</th>
+                                    <th>Điểm thi HK</th>
                                     <th>Tác vụ</th>
                                 </tr>
                             </thead>
 
-                            <tbody>
-                                <tr>
-                                    <td>001</td>
-                                    <td>Đặng Đức Ba</td>
-                                    <td>8đ</td>
-                                    <td>9đ</td>
-                                    <td>8.5đ</td>
-                                    <td>
-                                        <ul class="action">
-                                            <li><a href="" title="Sửa" class="edit"><i class="fa fa-pencil" aria-hidden="true"></i></a></li>
-                                            <li><a href="" title="Xóa" class="delete"><i class="fa fa-trash" aria-hidden="true"></i></a></li>
-                                        </ul>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>002</td>
-                                    <td>Đặng Đức Ba</td>
-                                    <td>8đ</td>
-                                    <td>9đ</td>
-                                    <td>8.5đ</td>
-                                    <td>
-                                        <ul class="action">
-                                            <li><a href="" title="Sửa" class="edit"><i class="fa fa-pencil" aria-hidden="true"></i></a></li>
-                                            <li><a href="" title="Xóa" class="delete"><i class="fa fa-trash" aria-hidden="true"></i></a></li>
-                                        </ul>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>003</td>
-                                    <td>Đặng Đức Ba</td>
-                                    <td>8đ</td>
-                                    <td>9đ</td>
-                                    <td>8.5đ</td>
-                                    <td>
-                                        <ul class="action">
-                                            <li><a href="" title="Sửa" class="edit"><i class="fa fa-pencil" aria-hidden="true"></i></a></li>
-                                            <li><a href="" title="Xóa" class="delete"><i class="fa fa-trash" aria-hidden="true"></i></a></li>
-                                        </ul>
-                                    </td>
-                                </tr>
+                            <tbody id="score-table-content">
+                                
                             </tbody>
                         </table>
                     </div>
-                    <div class="main-content__info-bottom">
+                    <div id="stu-score-form" class="main-content__info-bottom" style="display: none;">
                         <div class="info__bottom-content">
                             <div class="box">
-                                <label for="">STT</label>
-                                <input type="text" name="" id="">
+                                <label for="mahs">Mã HS</label>
+                                <input type="text" id="mahs">
                             </div>
                             <div class="box">
-                                <label for="">Họ Tên</label>
-                                <input type="text" name="" id="">
+                                <label for="hoten">Họ Tên</label>
+                                <input type="text" id="hoten">
                             </div>
                             <div class="box">
-                                <label for="">Điểm 15p</label>
-                                <input type="text" name="" id="">
+                                <label for="d15p">Điểm 15p</label>
+                                <input type="text" id="d15p">
                             </div>
                             <div class="box">
-                                <label for="">Điểm 1 tiết</label>
-                                <input type="text" name="" id="">
+                                <label for="d1t">Điểm 1 tiết</label>
+                                <input type="text" id="d1t">
                             </div>
                             <div class="box">
-                              <label for="">Điểm Cuối HK</label>
-                              <input type="text" name="" id="">
+                              <label for="thihk">Điểm thi HK</label>
+                              <input type="text" id="thihk">
                           </div>
                         </div>
                         <div class="main-content__action">
-                            <button><i class="fa-solid fa-circle-plus"></i>Add</button>
-                            <button><i class="fa-solid fa-pen"></i>Update</button>
-                            <button><i class="fa-solid fa-arrow-rotate-left"></i>Reset</button>
+                            <button id='update-score-btn' onclick="updateStuScore()"><i class="fa-solid fa-pen"></i>Cập nhật</button>
+                            <button id='reset-btn' onclick="resetForm();"><i class="fa-solid fa-arrow-rotate-left"></i>Làm mới</button>
+                            <button id='edit-mode-btn' onclick="openEditMode();"><i class="fa fa-pencil"></i>Chỉnh sửa</button>
                         </div>
                     </div>
                 </div>
@@ -196,6 +162,8 @@
             </div>
         </div>
     </div>
+    <script src="http://localhost:5000/js/score.js">
+    </script>
 </body>
 
 </html>
