--- a/server/views/static/index.html
+++ b/server/views/static/index.html
@@ -25,8 +25,7 @@ a:hover {
         <a href="/student" >Danh sách học sinh</a>
         <a href="/class">Danh sách lớp học</a>
         <a href="/score">Bảng điểm môn học</a>
-        <a href="/report">Báo cáo tổng kết môn học</a>
-        <a href="/report">Báo cáo tổng kêt học kì</a>
+        <a href="/report">Báo cáo tổng kết</a>
         <a href="/logout">Thoát</a>
     </div>
 </body>
