Hoan tat phan backend

--- a/server/views/static/report.html
+++ b/server/views/static/report.html
@@ -101,6 +101,7 @@
                         <thead id="report-t-head"></thead>
                         <tbody id="report-t-body"></tbody>
                         </table>
+                        <b id="inform" style="color: red;"></b>>
                     </div>
                 </div>
             </div>
