--- a/server/views/static/class.html
+++ b/server/views/static/class.html
@@ -70,6 +70,9 @@
                     <li>
                         <a href="/report">Báo Cáo Tổng Kết</a>
                     </li>
+                    <li>
+                        <a href="/rule">Quy Định</a>
+                    </li>
                 </ul>
             </div>
         </div>
