--- a/server/views/static/report.html
+++ b/server/views/static/report.html
@@ -47,6 +47,9 @@
                     <li class = "active">
                         <a href="/report">Báo Cáo Tổng Kết</a>
                     </li>
+                    <li>
+                        <a href="/rule">Quy Định</a>
+                    </li>
                 </ul>
             </div>
         </div>
