--- a/server/views/static/student.html
+++ b/server/views/static/student.html
@@ -55,6 +55,9 @@ th, td {
                     <li>
                         <a href="/report">Báo Cáo Tổng Kết</a>
                     </li>
+                    <li>
+                        <a href="/rule">Quy Định</a>
+                    </li>
                 </ul>
             </div>
         </div>
