update class rule

--- a/server/views/static/student.html
+++ b/server/views/static/student.html
@@ -125,7 +125,7 @@ th, td {
                             <div class="box" id="classInput">
                                 <label for="lop">Lớp</label>
                                 <select id="lop" style="float:right;">
-                                    <option value="null">NULL</option>
+                                    <!-- <option value="null">NULL</option>
                                     <option value="10A1">10A1</option>
                                     <option value="10A2">10A2</option>
                                     <option value="10A3">10A3</option>
@@ -134,7 +134,7 @@ th, td {
                                     <option value="11A2">11A2</option>
                                     <option value="11A3">11A3</option>
                                     <option value="12A1">12A1</option>
-                                    <option value="12A2">12A2</option>
+                                    <option value="12A2">12A2</option> -->
                                 </select>
                             </div>
                         </div>
