add rule for class

--- a/server/views/static/class.html
+++ b/server/views/static/class.html
@@ -87,14 +87,14 @@
             <div class="select">
               <span>Chọn lớp : </span>
               <select id="class-input" class="select-class">
-                <option value="10A1">Lớp 10A1</option>
+                <!-- <option value="10A1">Lớp 10A1</option>
                 <option value="10A2">Lớp 10A2</option>
                 <option value="10A3">Lớp 10A3</option>
                 <option value="11A1">Lớp 11A1</option>
                 <option value="11A2">Lớp 11A2</option>
                 <option value="11A3">Lớp 11A3</option>
                 <option value="12A1">Lớp 12A1</option>
-                <option value="12A2">Lớp 12A2</option>
+                <option value="12A2">Lớp 12A2</option> -->
               </select>
               <button id="view-class-btn">Xem</button>
               <button id="disp-stu-list-btn" style="margin-left: 300px;">Thêm học sinh</button>
@@ -171,6 +171,9 @@
                     <label for="em"><b>Email</b></label>
                     <input type="text" id="em">
                 </form>
+
+                <div id="inform">
+                </div>
             </div> 
         </div>
     </div>
