--- a/server/views/static/score.html
+++ b/server/views/static/score.html
@@ -59,14 +59,14 @@
                 <div class="select-class">
                     <span>Chọn lớp: </span>
                     <select id="class-input" class="select-class">
-                        <option value="10A1">Lớp 10A1</option>
+                        <!-- <option value="10A1">Lớp 10A1</option>
                         <option value="10A2">Lớp 10A2</option>
                         <option value="10A3">Lớp 10A3</option>
                         <option value="11A1">Lớp 11A1</option>
                         <option value="11A2">Lớp 11A2</option>
                         <option value="11A3">Lớp 11A3</option>
                         <option value="12A1">Lớp 12A1</option>
-                        <option value="12A2">Lớp 12A2</option>
+                        <option value="12A2">Lớp 12A2</option> -->
                     </select>
                 </div>
                 <div class="select-subject">
