--- a/server/views/static/score.html
+++ b/server/views/static/score.html
@@ -20,7 +20,7 @@
                 <div class="header__sidebar-left">
                     <p id="user">Người dùng: <span id="username"></span></p>
                     <p id="today">Hôm nay: <span id="todayis"></span></p>
-                    <p id="today"><span id="logout"><a href="/logout" style="color: red;">Đăng xuất<a></span></p>
+                    <p id="today"><span id="logout"><a href="/logout" style="color: blue;">Đăng xuất<a></span></p>
                 </div>
                 <div class="header__sidebar-right">
                 </div>
@@ -59,14 +59,14 @@
                 <div class="select-class">
                     <span>Chọn lớp: </span>
                     <select id="class-input" class="select-class">
-                        <!-- <option value="10A1">Lớp 10A1</option>
+                        <option value="10A1">Lớp 10A1</option>
                         <option value="10A2">Lớp 10A2</option>
                         <option value="10A3">Lớp 10A3</option>
                         <option value="11A1">Lớp 11A1</option>
                         <option value="11A2">Lớp 11A2</option>
                         <option value="11A3">Lớp 11A3</option>
                         <option value="12A1">Lớp 12A1</option>
-                        <option value="12A2">Lớp 12A2</option> -->
+                        <option value="12A2">Lớp 12A2</option>
                     </select>
                 </div>
                 <div class="select-subject">
@@ -150,9 +150,9 @@
                           </div>
                         </div>
                         <div class="main-content__action">
-                            <button id='update-score-btn' onclick="updateStuScore()"><i class="fa-solid fa-pen"></i>Cập nhật</button>
-                            <button id='reset-btn' onclick="resetForm();"><i class="fa-solid fa-arrow-rotate-left"></i>Làm mới</button>
-                            <button id='edit-mode-btn' onclick="openEditMode();"><i class="fa fa-pencil"></i>Chỉnh sửa</button>
+                            <button id='update-score-btn' style="width: 100px;" onclick="updateStuScore()"><i class="fa-solid fa-pen"></i>Cập nhật</button>
+                            <button id='reset-btn' style="width: 100px;" onclick="resetForm();"><i class="fa-solid fa-arrow-rotate-left"></i>Làm mới</button>
+                            <button id='edit-mode-btn' style="width: 100px;" onclick="openEditMode();"><i class="fa fa-pencil"></i>Chỉnh sửa</button>
                         </div>
                     </div>
                 </div>
