add rule of class

--- a/server/views/static/class.html
+++ b/server/views/static/class.html
@@ -144,6 +144,9 @@
                             <tbody id="stu-list-content">
                             </tbody>
                         </table>
+                        <div id="inform">
+
+                        </div>
                     </div>
                 </div>
 
