--- a/server/views/static/rule.html
+++ b/server/views/static/rule.html
@@ -99,8 +99,8 @@ th, td {
                       <thead>
                         <tr>
                           <th >Sĩ số tối đa:</th>
-                          <th><input type="number" min="1"></th>
-                          <th><button>Áp dụng</button></th>
+                          <th><input id="count-stu" type="number" min="1"></th>
+                          <th><button id="count">Áp dụng</button></th>
                         </tr>
                         <tr>
                           <th>Xóa Lớp: </th>
@@ -116,7 +116,7 @@ th, td {
                                   <option value="12A2">Lớp 12A2</option> -->
                                 </select>
                            </th>
-                           <th><button>Xóa lớp</button></th>
+                           <th><button id="delete-class-btn">Xóa lớp</button></th>
                         </tr>
                         <tr>
 
@@ -133,16 +133,16 @@ th, td {
                           <th style="text-align: left;">
                             <p style="text-align: right;">Tên mới: </p>
                           </th>
-                          <th><input type="text" ></th>
-                          <th><button>Áp dụng</button></th>
+                          <th><input id="rename-class" type="text" ></th>
+                          <th><button id="rename-class-btn">Áp dụng</button></th>
                          </tr>
 
                         <tr>
                           <th>Thêm lớp mới: </th>
                            <th>
-                              <input type="text">
+                              <input id="add-class" type="text">
                            </th>
-                          <th><button>Thêm lớp</button></th>
+                          <th><button id="add-class-btn">Thêm lớp</button></th>
                         </tr>
 
                         <tr>
@@ -221,8 +221,8 @@ th, td {
                       <thead>
                         <tr>
                           <th>Điểm chuẩn:</th>
-                          <th><input type="number"></th>
-                          <th><button>Áp dụng</button></th>
+                          <th><input id="score" type="number"></th>
+                          <th><button id="score-btn">Áp dụng</button></th>
                         </tr>
 
                         <tr>
